# LooseCombinedNavigation

./: .gitignore  .gitinore  CMakeCache.txt  CMakeLists.txt  CombinedNavigation  CombinedNavigation.cbp  Doxygen.config  Makefile  build.sh  cmake_install.cmake  config.yaml  config_遮挡.yaml  kf-gins.yaml  plt.yaml  readme.md
.qt/: QtDeploySupport.cmake
CombinedNavigation_autogen/: mocs_compilation.cpp
CombinedNavigation_autogen/VVDX5NNFQZ/: moc_mainwindow.cpp
CombinedNavigation_autogen/include/UI/: ui_MainWindow.h
README/: sciplot-readme.md  yaml-cpp-readme.md
Sources/: BasicFuns.cpp  CompareInsRes.cpp  INSData.cpp  INSSolution.cpp  LooseCombination.cpp  main.cpp  mainwindow.cpp
Sources/Headers/: mainwindow.h
Sources/UI/: mainwindow.ui
Sources/test/: testForMech.cpp
config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake  static_link_order_test
include/: BasicFuns.h  INSData.h  INSSolution.h  LooseCombination.h  Matrix.h
lib/CoorSys/: CMakeLists.txt  CoorSys.h
lib/Filter/: cKalman.cpp  cKalman.h
lib/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h
lib/TerminalMessage/: CMakeLists.txt  TerminalMessage.cpp  TerminalMessage.h  build.sh
lib/TimeSys/: CMakeLists.txt  TimeSys.cpp  TimeSys.h  build.sh
lib/sciplot/: CMakeLists.txt  build.sh
src/Common/: Angle.h  Earth.h  Rotation.h
src/ErrorEvaluation/: ErrorEvalution.cpp  ErrorEvalution.h
src/FileIO/: cFileConvertor.cpp  cFileConvertor.h  cImuDataReader.cpp  cImuDataReader.h  cfileBase.cpp  cfileBase.h  cfileReader.cpp  cfileReader.h  cfileSaver.cpp  cfileSaver.h
src/GNSS/: GNSSType.cpp  GNSSType.h  GNSS_Type.h
src/INS/: INSData.cpp  INSData.h  INSType.cpp  INSType.h
src/LC/: GINSType.cpp  GINSType.h  LooseCombination.cpp  LooseCombination.h
src/Process/: ins.cpp  lc.cpp  plt.cpp
