cmake_minimum_required(VERSION 3.4)
project(TERMINALMESSAGE VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)

get_filename_component(TERMINALMESSAGE_DIR "${CMAKE_CURRENT_SOURCE_DIR}" ABSOLUTE)
file(GLOB TERMINALMESSAGE_SRC "${TERMINALMESSAGE_DIR}/*.cpp" "${TERMINALMESSAGE_DIR}/*.cxx"
        "${TERMINALMESSAGE_DIR}/*.cc" "${TERMINALMESSAGE_DIR}/*.c")

include_directories(${TERMINALMESSAGE_DIR})
add_library(TerminalMessage SHARED ${TERMINALMESSAGE_SRC})