cmake_minimum_required(VERSION 3.4)
project(TIME_SYSTEM_CPP VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)

# 设置头文件、源文件路径
set(TIME_SYSTEM_CPP_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(TIME_SYSTEM_CPP_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
# 抓取指定源文件路径下的所有源文件
file(GLOB TIME_SYSTEM_CPP_SOURCES "${TIME_SYSTEM_CPP_SOURCES_DIR}/*.cpp"
        "${TIME_SYSTEM_CPP_SOURCES_DIR}/*.cxx" "${TIME_SYSTEM_CPP_SOURCES_DIR}/*.cc"
        "${TIME_SYSTEM_CPP_SOURCES_DIR}/*.c")

include_directories(${TIME_SYSTEM_CPP_INCLUDE_DIR})
add_library(TIME_SYSTEM_CPP SHARED ${TIME_SYSTEM_CPP_SOURCES})