cmake_minimum_required(VERSION 3.4)
project(SCIPLOT_CPP VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)

#  设置头文件和源文件的存储路径
set(SCIPLOT_CPP_INCLUDE_DIR_1 ${CMAKE_CURRENT_SOURCE_DIR})
set(SCIPLOT_CPP_INCLUDE_DIR_2 "${CMAKE_CURRENT_SOURCE_DIR}/specs")
set(SCIPLOT_CPP_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR})
# 获取所有hpp文件
file(GLOB SCIPLOT_CPP_SOURCES "${SCIPLOT_CPP_SOURCES_DIR}/*.hpp")
message("SCIPLOT_CPP_SOURCES:${SCIPLOT_CPP_SOURCES}")
include_directories(SCIPLOT_CPP ${SCIPLOT_CPP_INCLUDE_DIR_1} ${SCIPLOT_CPP_INCLUDE_DIR_2})
add_library(SCIPLOT_CPP SHARED ${SCIPLOT_CPP_SOURCES})